# glbforge

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: triangle.py
glbforge/: __init__.py  writer.py
tests/: test_writer.py
